Update on Overleaf.

--- a/iclr2021.tex
+++ b/iclr2021.tex
@@ -90,7 +90,7 @@ We provide the full source code for all the experiments described in the paper\f
 
 This paper makes the following contributions: (1) We present the CoLES method that adapts contrastive learning in the self-supervised setting to the discrete event sequence domain. (2) We propose a novel theoretically grounded augmentation method for discrete event sequences. (3) We demonstrate that CoLES consistently outperforms previously introduced supervised, self-supervised and semi-supervised learning baselines adapted to the event sequence domain. We also conducted a pilot study on event sequence data 
 %(clients card transactions and entities transfers) 
-of a large European bank. We tested CoLES against the baselines and achieved superior performance on downstream tasks which produced significant financial gains. %for the bank.
+of a large European bank. We tested CoLES against the baselines and achieved superior performance on downstream tasks which produced significant financial gains, measured in hundreds of millions of dollars yearly.
 % approaches both in supervised and semi-supervised learning scenarios. %on four different user behavior sequence datasets.
 %we also propose a new theoretically grounded data augmentation strategy our method significantly outperforms other approaches adapted to event sequences domain
 
