Update on Overleaf.

--- a/iclr2021.tex
+++ b/iclr2021.tex
@@ -715,6 +715,9 @@ To evaluate our method in case of the restricted amount of labeled data, we use 
   \label{fig-semi}
 \end{figure}
 
+% !!! REMOVED BLOCK
+\iffalse
+
 \subsection{Embedding visualization} \label{app-sec-vis}
 
 In order to visualize CoLES embeddings in 2-dimensional space, we applied tSNE transformation~\citep{Maaten2008VisualizingDU} on them. tSNE transforms high-dimensional space to low-dimensional based on local relationships between points, so neighbor vectors in high-dimensional embedding space are pushed to be close in 2-dimensional space. We colorized 2-dimensional vectors using the target values of the datasets.
@@ -752,5 +755,7 @@ tSNE points from the churn prediction dataset are presented in Figure \ref{fig-t
     \label{fig-tsne-x5}
   \end{subfigure}
 \end{figure}
+
+\fi
 
 \end{document}
